<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/layout_variation"
    tools:context=".variation_concentration">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="#b30000"
            android:layout_gravity="center"
            android:text="@string/concentration"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="#b30000"
            android:layout_gravity="center"
            android:text="@string/variation"/>
    </LinearLayout>

    <GridLayout
        android:columnOrderPreserved="true"
        android:alignmentMode="alignMargins"
        android:rowCount="3"
        android:layout_marginTop="25dp"
        android:columnCount="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:id="@+id/ch4_graph"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="15dp"
            android:layout_margin="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:padding="10dp"
                    android:src="@drawable/graph_icon"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:text="@string/methane"
                    android:textColor="#000000" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:id="@+id/co2_graph"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="15dp"
            android:layout_margin="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:padding="10dp"
                    android:src="@drawable/graph_icon"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:text="@string/carbon"
                    android:textColor="#000000" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:text="@string/dioxide"
                    android:textColor="#000000" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            android:id="@+id/co_graph"
            app:cardCornerRadius="15dp"
            android:layout_margin="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:padding="10dp"
                    android:src="@drawable/graph_icon"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:text="@string/carbon"
                    android:textColor="#000000" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:text="@string/monoxide"
                    android:textColor="#000904" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:id="@+id/h2s_graph"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="15dp"
            android:layout_margin="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:padding="10dp"
                    android:src="@drawable/graph_icon"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:text="@string/hydrogen"
                    android:textColor="#000000" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:text="@string/sulphide"
                    android:textColor="#000000" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="176dp"
        android:layout_height="163dp"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:id="@+id/ch3_graph"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        app:cardElevation="6dp"
        app:cardCornerRadius="15dp"
        android:layout_margin="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:padding="10dp"
                android:src="@drawable/graph_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ammonia"
                android:textColor="#000904"
                android:textSize="13sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>