<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bgapps"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="250dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/sewageman" />

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="28dp"
                    android:text="@string/sewage_gas_monitoring"
                    android:textColor="#FFFFFF"
                    android:textSize="35sp" />

            </RelativeLayout>

            <GridLayout
                android:columnOrderPreserved="true"
                android:alignmentMode="alignMargins"
                android:rowCount="2"
                android:layout_marginTop="40dp"
                android:columnCount="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:id="@+id/gas_monitoring"
                    android:layout_rowWeight="1"
                    app:cardElevation="6dp"
                    app:cardCornerRadius="15dp"
                    android:layout_margin="12dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <pl.droidsonroids.gif.GifImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/gaslevelicon" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="13sp"
                            android:text="@string/gas"
                            android:textColor="#000904" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="13sp"
                            android:text="@string/measurement"
                            android:textColor="#000904" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/concentration_variation"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:cardElevation="6dp"
                    app:cardCornerRadius="15dp"
                    android:layout_marginEnd="10dp"
                    android:layout_margin="12dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">
                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/convariation"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/concentration"
                            android:textSize="12sp"
                            android:textColor="#000904" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/variation"
                            android:textSize="12sp"
                            android:textColor="#000904" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:id="@+id/settings"
                    android:layout_rowWeight="1"
                    app:cardElevation="6dp"
                    app:cardCornerRadius="15dp"
                    android:layout_margin="12dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">
                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/settings"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:textSize="13.5sp"
                            android:text="@string/settings"
                            android:textColor="#000904" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:id="@+id/calender1"
                    android:layout_rowWeight="1"
                    app:cardElevation="6dp"
                    app:cardCornerRadius="15dp"
                    android:layout_margin="12dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">
                        <pl.droidsonroids.gif.GifImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/calender"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:textSize="13sp"
                            android:text="@string/calendar"
                            android:textColor="#000904" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </GridLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:id="@+id/info"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="15dp"
                android:layout_marginStart="50dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="140dp"
                        android:layout_height="90dp"
                        android:src="@drawable/info" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/information"
                        android:textColor="#000904"
                        android:textSize="13sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>


</ScrollView>

